[package]
name = "flow-beat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
cpal = "0.15.2"
crossbeam = "0.8.2"
ctrlc = "3.2.5"
ggez = "0.8.1"
multiqueue = "0.3.2"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
